// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildPrompt snapshots > agentic-review with refDiff and reviewBase plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **reviewing subagent** using model \`MODEL-agentic-review\`. The package's task spec
files and its cumulative diff are found below. The subagent must:

1. **Read the task spec files** — they define the acceptance criteria. Every
   requirement must be checked, with one exception: ignore any spec
   requirement about files under \`.gtd/\` (or a root-level \`TODO.md\` /
   \`REVIEW.md\` / \`FEEDBACK.md\` acting as workflow state). Those files are
   managed by the workflow machine — created and deleted outside the
   implementation's control — so never report a finding about their
   presence, absence, or content.
2. **Read the package diff** — examine every hunk to determine whether the
   implementation satisfies the spec.
3. **Always write \`.gtd/FEEDBACK.md\`**:
   - **Fully satisfies the spec** → write an **empty** \`.gtd/FEEDBACK.md\` (zero bytes
     or whitespace only). This empty file is the **approval** signal.
   - **Does not fully satisfy** → write concrete, actionable findings anchored
     to specific file and symbol names, grouped under short headings, so the fix
     agent can act without re-reading the diff.
4. **Do not edit source files and do not commit** — the reviewer only writes
   \`.gtd/FEEDBACK.md\`, left uncommitted, then finishes its turn.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

### Package diff

\`\`\`diff
diff --git a/src/foo.ts b/src/foo.ts
+export const foo = 1
\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > agentic-review with rich package json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **reviewing subagent** using model \`MODEL-agentic-review\`. The package's task spec
files and its cumulative diff are found below. The subagent must:

1. **Read the task spec files** — they define the acceptance criteria. Every
   requirement must be checked, with one exception: ignore any spec
   requirement about files under \`.gtd/\` (or a root-level \`TODO.md\` /
   \`REVIEW.md\` / \`FEEDBACK.md\` acting as workflow state). Those files are
   managed by the workflow machine — created and deleted outside the
   implementation's control — so never report a finding about their
   presence, absence, or content.
2. **Read the package diff** — examine every hunk to determine whether the
   implementation satisfies the spec.
3. **Always write \`.gtd/FEEDBACK.md\`**:
   - **Fully satisfies the spec** → write an **empty** \`.gtd/FEEDBACK.md\` (zero bytes
     or whitespace only). This empty file is the **approval** signal.
   - **Does not fully satisfy** → write concrete, actionable findings anchored
     to specific file and symbol names, grouped under short headings, so the fix
     agent can act without re-reading the diff.
4. **Do not edit source files and do not commit** — the reviewer only writes
   \`.gtd/FEEDBACK.md\`, left uncommitted, then finishes its turn.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`
"
`;

exports[`buildPrompt snapshots > agentic-review with rich package plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **reviewing subagent** using model \`MODEL-agentic-review\`. The package's task spec
files and its cumulative diff are found below. The subagent must:

1. **Read the task spec files** — they define the acceptance criteria. Every
   requirement must be checked, with one exception: ignore any spec
   requirement about files under \`.gtd/\` (or a root-level \`TODO.md\` /
   \`REVIEW.md\` / \`FEEDBACK.md\` acting as workflow state). Those files are
   managed by the workflow machine — created and deleted outside the
   implementation's control — so never report a finding about their
   presence, absence, or content.
2. **Read the package diff** — examine every hunk to determine whether the
   implementation satisfies the spec.
3. **Always write \`.gtd/FEEDBACK.md\`**:
   - **Fully satisfies the spec** → write an **empty** \`.gtd/FEEDBACK.md\` (zero bytes
     or whitespace only). This empty file is the **approval** signal.
   - **Does not fully satisfy** → write concrete, actionable findings anchored
     to specific file and symbol names, grouped under short headings, so the fix
     agent can act without re-reading the diff.
4. **Do not edit source files and do not commit** — the reviewer only writes
   \`.gtd/FEEDBACK.md\`, left uncommitted, then finishes its turn.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > architecting agent json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/ARCHITECTURE.md\` holds the technical plan under development — seeded
from the converged product plan, or, if this is the very first turn on
already-technical input, written directly by the human. Develop it into a concrete,
implementation-ready technical plan **in this one turn** — use subagents /
internal iteration to go as deep as needed; there is no further agent-only
round after this one.

**Scope: technical/architectural decisions only.** Decide file/module
structure, data models, module boundaries, library or tech-stack choices, and
error-handling/concurrency strategy — the *how*, building on the *what*
already settled in this file's product content. Do not re-open or re-litigate
product/user-facing decisions from the prior phase; treat them as settled
context.

### Develop the architecture

Spawn a **planning-model subagent** using model \`MODEL-architecting\` to develop the
architecture. The subagent works entirely by editing \`.gtd/ARCHITECTURE.md\`:

1. **Explore the codebase before asking anything** — read the relevant files,
   tests, and docs so every question below is one the codebase genuinely
   cannot answer.
2. **Replace the seeded/captured content with a real architecture** — the
   files to change, module/data-model structure, and why, grounded in the
   codebase.
3. **Iterate internally** (spawn further subagents, reconsider, cross-check)
   until the architecture is as complete as it can get without human input.
   Do not leave this to a future round — there isn't one before the human is
   asked.
4. For every remaining open question, add it under a \`## Open Questions\`
   section near the top of the file, one \`### <question>\` sub-heading per
   question, whose first body line is \`Suggested default: <answer>\` — your
   best-guess answer, stated plainly, that the human can accept as-is. This
   structure is enforced: a \`###\` question with no \`Suggested default:\` line
   blocks your turn — \`gtd step-agent\` refuses until it's fixed. Omit the
   \`## Open Questions\` section entirely once there are none.
5. Leave \`.gtd/ARCHITECTURE.md\` **uncommitted** — the human's turn (\`gtd step\`)
   reads it next.
"
`;

exports[`buildPrompt snapshots > architecting agent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/ARCHITECTURE.md\` holds the technical plan under development — seeded
from the converged product plan, or, if this is the very first turn on
already-technical input, written directly by the human. Develop it into a concrete,
implementation-ready technical plan **in this one turn** — use subagents /
internal iteration to go as deep as needed; there is no further agent-only
round after this one.

**Scope: technical/architectural decisions only.** Decide file/module
structure, data models, module boundaries, library or tech-stack choices, and
error-handling/concurrency strategy — the *how*, building on the *what*
already settled in this file's product content. Do not re-open or re-litigate
product/user-facing decisions from the prior phase; treat them as settled
context.

### Develop the architecture

Spawn a **planning-model subagent** using model \`MODEL-architecting\` to develop the
architecture. The subagent works entirely by editing \`.gtd/ARCHITECTURE.md\`:

1. **Explore the codebase before asking anything** — read the relevant files,
   tests, and docs so every question below is one the codebase genuinely
   cannot answer.
2. **Replace the seeded/captured content with a real architecture** — the
   files to change, module/data-model structure, and why, grounded in the
   codebase.
3. **Iterate internally** (spawn further subagents, reconsider, cross-check)
   until the architecture is as complete as it can get without human input.
   Do not leave this to a future round — there isn't one before the human is
   asked.
4. For every remaining open question, add it under a \`## Open Questions\`
   section near the top of the file, one \`### <question>\` sub-heading per
   question, whose first body line is \`Suggested default: <answer>\` — your
   best-guess answer, stated plainly, that the human can accept as-is. This
   structure is enforced: a \`###\` question with no \`Suggested default:\` line
   blocks your turn — \`gtd step-agent\` refuses until it's fixed. Omit the
   \`## Open Questions\` section entirely once there are none.
5. Leave \`.gtd/ARCHITECTURE.md\` **uncommitted** — the human's turn (\`gtd step\`)
   reads it next.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > architecting agent with turnDiff plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/ARCHITECTURE.md\` holds the technical plan under development — seeded
from the converged product plan, or, if this is the very first turn on
already-technical input, written directly by the human. Develop it into a concrete,
implementation-ready technical plan **in this one turn** — use subagents /
internal iteration to go as deep as needed; there is no further agent-only
round after this one.

**Scope: technical/architectural decisions only.** Decide file/module
structure, data models, module boundaries, library or tech-stack choices, and
error-handling/concurrency strategy — the *how*, building on the *what*
already settled in this file's product content. Do not re-open or re-litigate
product/user-facing decisions from the prior phase; treat them as settled
context.

### Develop the architecture

Spawn a **planning-model subagent** using model \`MODEL-architecting\` to develop the
architecture. The subagent works entirely by editing \`.gtd/ARCHITECTURE.md\`:

1. **Explore the codebase before asking anything** — read the relevant files,
   tests, and docs so every question below is one the codebase genuinely
   cannot answer.
2. **Replace the seeded/captured content with a real architecture** — the
   files to change, module/data-model structure, and why, grounded in the
   codebase.
3. **Iterate internally** (spawn further subagents, reconsider, cross-check)
   until the architecture is as complete as it can get without human input.
   Do not leave this to a future round — there isn't one before the human is
   asked.
4. For every remaining open question, add it under a \`## Open Questions\`
   section near the top of the file, one \`### <question>\` sub-heading per
   question, whose first body line is \`Suggested default: <answer>\` — your
   best-guess answer, stated plainly, that the human can accept as-is. This
   structure is enforced: a \`###\` question with no \`Suggested default:\` line
   blocks your turn — \`gtd step-agent\` refuses until it's fixed. Omit the
   \`## Open Questions\` section entirely once there are none.
5. Leave \`.gtd/ARCHITECTURE.md\` **uncommitted** — the human's turn (\`gtd step\`)
   reads it next.

### Latest human input (answers / sketch / review feedback)

\`\`\`diff
diff --git a/ARCHITECTURE.md b/ARCHITECTURE.md
+- answer: use option A
\`\`\`

Read the diff above as **feedback, not finished work**:

- Code changes are suggestions — fold them into the architecture and
  re-implement them properly, including test coverage, rather than restoring
  them verbatim.
- Code comments are positional feedback about the code at that location.
- Plan-text changes are global feedback on the architecture (or the reviewed
  work) as a whole.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > architecting human json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/ARCHITECTURE.md\` holds the technical plan under development, with open
questions under a \`## Open Questions\` section — each \`### <question>\`
carrying a suggested default.

This is a human gate; there is nothing for the agent to do.

Tell the user:

- To answer a question, edit its \`### <question>\` entry under \`## Open
  Questions\` in place — replace the \`Suggested default: ...\` line with
  \`Answer: ...\` (or annotate it further), then run \`gtd step\`.
- To accept **all** suggested defaults as-is, run \`gtd step\` with **no
  edits** — this converges the architecture and moves on to decomposition.
"
`;

exports[`buildPrompt snapshots > architecting human plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/ARCHITECTURE.md\` holds the technical plan under development, with open
questions under a \`## Open Questions\` section — each \`### <question>\`
carrying a suggested default.

This is a human gate; there is nothing for the agent to do.

Tell the user:

- To answer a question, edit its \`### <question>\` entry under \`## Open
  Questions\` in place — replace the \`Suggested default: ...\` line with
  \`Answer: ...\` (or annotate it further), then run \`gtd step\`.
- To accept **all** suggested defaults as-is, run \`gtd step\` with **no
  edits** — this converges the architecture and moves on to decomposition.
"
`;

exports[`buildPrompt snapshots > await-learning-review json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/LEARNINGS.md\` holds the distilled learnings from this cycle, drafted by
the agent. This is a human gate; there is nothing for the agent to do.

Tell the user:

- Read \`.gtd/LEARNINGS.md\`.
- Delete anything not worth keeping, or edit/add anything the draft missed.
- Run \`gtd step\` — with or without edits, either way proceeds: the agent
  integrates whatever remains into the project's own memory
  (CLAUDE.md/AGENTS.md/docs) next.

There is no reject path — this gate only refines what gets kept, it doesn't
send the cycle back for rework.
"
`;

exports[`buildPrompt snapshots > await-learning-review plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/LEARNINGS.md\` holds the distilled learnings from this cycle, drafted by
the agent. This is a human gate; there is nothing for the agent to do.

Tell the user:

- Read \`.gtd/LEARNINGS.md\`.
- Delete anything not worth keeping, or edit/add anything the draft missed.
- Run \`gtd step\` — with or without edits, either way proceeds: the agent
  integrates whatever remains into the project's own memory
  (CLAUDE.md/AGENTS.md/docs) next.

There is no reject path — this gate only refines what gets kept, it doesn't
send the cycle back for rework.
"
`;

exports[`buildPrompt snapshots > await-review json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/REVIEW.md\` holds the review record for the completed work. This is a human
gate; there is nothing for the agent to do.

Tell the user:

- Read \`.gtd/REVIEW.md\` (and the underlying work it points at).
- To **approve**: run \`gtd step\` with no edits, or only tick checkboxes in
  \`.gtd/REVIEW.md\` — either way ends the review with an approval.
- To **request changes**: write substantive edits or annotations into
  \`.gtd/REVIEW.md\` (or the code) describing what's wrong, then run \`gtd step\` —
  this sends the feedback back for another round.
"
`;

exports[`buildPrompt snapshots > await-review plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/REVIEW.md\` holds the review record for the completed work. This is a human
gate; there is nothing for the agent to do.

Tell the user:

- Read \`.gtd/REVIEW.md\` (and the underlying work it points at).
- To **approve**: run \`gtd step\` with no edits, or only tick checkboxes in
  \`.gtd/REVIEW.md\` — either way ends the review with an approval.
- To **request changes**: write substantive edits or annotations into
  \`.gtd/REVIEW.md\` (or the code) describing what's wrong, then run \`gtd step\` —
  this sends the feedback back for another round.
"
`;

exports[`buildPrompt snapshots > building with rich package json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Build the package described below by orchestrating the execution — you do not
implement the tasks yourself. Spawn **one subagent per task**, all in
**parallel**, each using model \`MODEL-building\`:

- **Context**: the task content only (it is self-contained).
- **Fresh context**: each worker starts cold, with no shared history.
- **Hands off \`.gtd/\`** (inline rule for workers): never create, edit, or
  delete anything under \`.gtd/\` — it is workflow state owned by the machine.
  If the task spec mentions a \`.gtd/\` file, skip that part.
- **TDD discipline** (inline rules for workers):
  - Write ONE test → implement → pass → repeat (vertical slices).
  - **Do NOT** write all tests first then implement (horizontal slicing).
  - Tests verify behavior through public interfaces, not implementation details
    — a good test survives a refactor.

Wait for all workers to complete. **If any worker fails** (crash, timeout, error
— not a test failure): report which tasks failed and ask the user whether to
retry the failed tasks, skip and continue, or abort.

Leave all changes uncommitted. An outside process handles that.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`
"
`;

exports[`buildPrompt snapshots > building with rich package plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Build the package described below by orchestrating the execution — you do not
implement the tasks yourself. Spawn **one subagent per task**, all in
**parallel**, each using model \`MODEL-building\`:

- **Context**: the task content only (it is self-contained).
- **Fresh context**: each worker starts cold, with no shared history.
- **Hands off \`.gtd/\`** (inline rule for workers): never create, edit, or
  delete anything under \`.gtd/\` — it is workflow state owned by the machine.
  If the task spec mentions a \`.gtd/\` file, skip that part.
- **TDD discipline** (inline rules for workers):
  - Write ONE test → implement → pass → repeat (vertical slices).
  - **Do NOT** write all tests first then implement (horizontal slicing).
  - Tests verify behavior through public interfaces, not implementation details
    — a good test survives a refactor.

Wait for all workers to complete. **If any worker fails** (crash, timeout, error
— not a test failure): report which tasks failed and ask the user whether to
retry the failed tasks, skip and continue, or abort.

Leave all changes uncommitted. An outside process handles that.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > escalate json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The agent was not able to fix all errors on its own. The last error report is
stored in \`.gtd/ERRORS.md\` for a human to investigate.

Next steps for the human developer:

1. Investigate and fix errors reported in \`.gtd/ERRORS.md\`
2. Delete \`.gtd/ERRORS.md\`
3. Run \`gtd step\` when you are ready to continue
"
`;

exports[`buildPrompt snapshots > escalate plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The agent was not able to fix all errors on its own. The last error report is
stored in \`.gtd/ERRORS.md\` for a human to investigate.

Next steps for the human developer:

1. Investigate and fix errors reported in \`.gtd/ERRORS.md\`
2. Delete \`.gtd/ERRORS.md\`
3. Run \`gtd step\` when you are ready to continue
"
`;

exports[`buildPrompt snapshots > fixing with backtick feedbackContent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Or dispute the feedback** — if a finding is wrong, empty or delete
   \`.gtd/FEEDBACK.md\` instead of fixing it. The machine picks the dispute up
   either way.
4. **Leave every change uncommitted and finish your turn** — do **not** commit
   or stage.

### Feedback to address

\`\`\`\`
see \`\`\`snippet\`\`\` here
\`\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > fixing with empty feedbackContent json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Or dispute the feedback** — if a finding is wrong, empty or delete
   \`.gtd/FEEDBACK.md\` instead of fixing it. The machine picks the dispute up
   either way.
4. **Leave every change uncommitted and finish your turn** — do **not** commit
   or stage.
"
`;

exports[`buildPrompt snapshots > fixing with empty feedbackContent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Or dispute the feedback** — if a finding is wrong, empty or delete
   \`.gtd/FEEDBACK.md\` instead of fixing it. The machine picks the dispute up
   either way.
4. **Leave every change uncommitted and finish your turn** — do **not** commit
   or stage.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > fixing with plain feedbackContent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Or dispute the feedback** — if a finding is wrong, empty or delete
   \`.gtd/FEEDBACK.md\` instead of fixing it. The machine picks the dispute up
   either way.
4. **Leave every change uncommitted and finish your turn** — do **not** commit
   or stage.

### Feedback to address

\`\`\`
FAIL: expected 1 to equal 2
\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > grilled json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/ARCHITECTURE.md\` contains a converged architecture/technical plan.
Decompose it into an ordered set of executable work packages stored in the
\`.gtd/\` directory. If \`.gtd/\` already holds packages from an earlier turn,
immediately abort and raise an error.

Spawn a **planning-model subagent** using model \`MODEL-decompose\` to perform the
decomposition. It creates numbered package directories, each holding numbered
task files:

\`\`\`
.gtd/
  01-<package-name>/
    01-<task-name>.md
    02-<task-name>.md
  02-<package-name>/
    ...
\`\`\`

**Rules for the subagent:**

1. **Packages are sequential, in dependency order** — ordinal-prefixed
   directories (\`01-\`, \`02-\`, …) execute in that order and the set is frozen
   once written. Order them so each package depends only on lower-numbered ones.

2. **Each package is green on its own** — the test suite runs after every
   package. Never split a feature so the tree stays red until a later package
   lands.

3. **Tasks within a package are parallel and file-disjoint** — all tasks in a
   package run simultaneously, each via one subagent, against the same working
   tree with no isolation. Two tasks that would touch the same file must be
   **merged** into one. If task B depends on task A, put them in separate
   packages.

4. **Vertical slices, not horizontal** — each package is a thin, end-to-end
   slice that is demoable or verifiable on its own. Prefer many thin packages
   over few thick ones; never a "set up infrastructure" package.

5. **Task files are self-contained** — each task \`.md\` includes a clear
   description of what to build, acceptance criteria as \`- [ ] Criterion\`
   checkboxes, the relevant file paths to examine, and any constraints or edge
   cases. It is the only context building agents will receive to work on the
   task.

6. **Specs must never reference \`.gtd/\` files** — \`.gtd/ARCHITECTURE.md\` is
   consumed and **deleted** the moment decomposition completes, and every other file
   under \`.gtd/\` (including these task specs) is machine-managed workflow
   state. No task description, acceptance criterion, or constraint may require
   creating, preserving, updating, or checking any \`.gtd/\` file — such a
   criterion can never be satisfied and would derail the workflow.

**DO NOT** commit any changes. This process runs within a larger orchestration
that depends on uncommitted changes.
"
`;

exports[`buildPrompt snapshots > grilled plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/ARCHITECTURE.md\` contains a converged architecture/technical plan.
Decompose it into an ordered set of executable work packages stored in the
\`.gtd/\` directory. If \`.gtd/\` already holds packages from an earlier turn,
immediately abort and raise an error.

Spawn a **planning-model subagent** using model \`MODEL-decompose\` to perform the
decomposition. It creates numbered package directories, each holding numbered
task files:

\`\`\`
.gtd/
  01-<package-name>/
    01-<task-name>.md
    02-<task-name>.md
  02-<package-name>/
    ...
\`\`\`

**Rules for the subagent:**

1. **Packages are sequential, in dependency order** — ordinal-prefixed
   directories (\`01-\`, \`02-\`, …) execute in that order and the set is frozen
   once written. Order them so each package depends only on lower-numbered ones.

2. **Each package is green on its own** — the test suite runs after every
   package. Never split a feature so the tree stays red until a later package
   lands.

3. **Tasks within a package are parallel and file-disjoint** — all tasks in a
   package run simultaneously, each via one subagent, against the same working
   tree with no isolation. Two tasks that would touch the same file must be
   **merged** into one. If task B depends on task A, put them in separate
   packages.

4. **Vertical slices, not horizontal** — each package is a thin, end-to-end
   slice that is demoable or verifiable on its own. Prefer many thin packages
   over few thick ones; never a "set up infrastructure" package.

5. **Task files are self-contained** — each task \`.md\` includes a clear
   description of what to build, acceptance criteria as \`- [ ] Criterion\`
   checkboxes, the relevant file paths to examine, and any constraints or edge
   cases. It is the only context building agents will receive to work on the
   task.

6. **Specs must never reference \`.gtd/\` files** — \`.gtd/ARCHITECTURE.md\` is
   consumed and **deleted** the moment decomposition completes, and every other file
   under \`.gtd/\` (including these task specs) is machine-managed workflow
   state. No task description, acceptance criterion, or constraint may require
   creating, preserving, updating, or checking any \`.gtd/\` file — such a
   criterion can never be satisfied and would derail the workflow.

**DO NOT** commit any changes. This process runs within a larger orchestration
that depends on uncommitted changes.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > grilling agent json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/TODO.md\` holds the plan under development. Develop it into a concrete,
product-level plan **in this one turn** — use subagents / internal iteration
to go as deep as needed; there is no further agent-only round after this one.

**Scope: product and user-facing decisions only.** Do not decide
implementation details in this file — file/module structure, data models,
library or tech-stack choices, and other architecture questions belong to the
next phase (\`.gtd/ARCHITECTURE.md\`) and must not be treated as open questions
here.

### Develop the plan

Spawn a **planning-model subagent** using model \`MODEL-grilling\` to develop the plan.
The subagent works entirely by editing \`.gtd/TODO.md\`:

1. **Explore the codebase before asking anything** — read the relevant files,
   tests, and docs so every question below is one the codebase genuinely
   cannot answer.
2. **Replace the captured input / seed template with a real product plan** —
   what to build and why, and the user-facing behavior it should have,
   grounded in the codebase. Leave *how* to build it for the next phase.
3. **Iterate internally** (spawn further subagents, reconsider, cross-check)
   until the plan is as complete as it can get without human input. Do not
   leave this to a future round — there isn't one before the human is asked.
4. For every remaining open question, add it under a \`## Open Questions\`
   section near the top of the file, one \`### <question>\` sub-heading per
   question, whose first body line is \`Suggested default: <answer>\` — your
   best-guess answer, stated plainly, that the human can accept as-is. This
   structure is enforced: a \`###\` question with no \`Suggested default:\` line
   blocks your turn — \`gtd step-agent\` refuses until it's fixed. Omit the
   \`## Open Questions\` section entirely once there are none.
5. Leave \`.gtd/TODO.md\` **uncommitted** — the human's turn (\`gtd step\`) reads it
   next.
"
`;

exports[`buildPrompt snapshots > grilling agent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/TODO.md\` holds the plan under development. Develop it into a concrete,
product-level plan **in this one turn** — use subagents / internal iteration
to go as deep as needed; there is no further agent-only round after this one.

**Scope: product and user-facing decisions only.** Do not decide
implementation details in this file — file/module structure, data models,
library or tech-stack choices, and other architecture questions belong to the
next phase (\`.gtd/ARCHITECTURE.md\`) and must not be treated as open questions
here.

### Develop the plan

Spawn a **planning-model subagent** using model \`MODEL-grilling\` to develop the plan.
The subagent works entirely by editing \`.gtd/TODO.md\`:

1. **Explore the codebase before asking anything** — read the relevant files,
   tests, and docs so every question below is one the codebase genuinely
   cannot answer.
2. **Replace the captured input / seed template with a real product plan** —
   what to build and why, and the user-facing behavior it should have,
   grounded in the codebase. Leave *how* to build it for the next phase.
3. **Iterate internally** (spawn further subagents, reconsider, cross-check)
   until the plan is as complete as it can get without human input. Do not
   leave this to a future round — there isn't one before the human is asked.
4. For every remaining open question, add it under a \`## Open Questions\`
   section near the top of the file, one \`### <question>\` sub-heading per
   question, whose first body line is \`Suggested default: <answer>\` — your
   best-guess answer, stated plainly, that the human can accept as-is. This
   structure is enforced: a \`###\` question with no \`Suggested default:\` line
   blocks your turn — \`gtd step-agent\` refuses until it's fixed. Omit the
   \`## Open Questions\` section entirely once there are none.
5. Leave \`.gtd/TODO.md\` **uncommitted** — the human's turn (\`gtd step\`) reads it
   next.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > grilling agent with decisionLog plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/TODO.md\` holds the plan under development. Develop it into a concrete,
product-level plan **in this one turn** — use subagents / internal iteration
to go as deep as needed; there is no further agent-only round after this one.

**Scope: product and user-facing decisions only.** Do not decide
implementation details in this file — file/module structure, data models,
library or tech-stack choices, and other architecture questions belong to the
next phase (\`.gtd/ARCHITECTURE.md\`) and must not be treated as open questions
here.

### Prior decisions

Recorded in past squash commits, oldest to newest, with no deduplication — if two entries answer the same question differently, the LATER one (further down) is the current, authoritative answer. Don't re-ask a settled question unless the codebase now genuinely contradicts it.

\`\`\`
# Architecture & Product Decisions

### Calculator display precision
Decimal display defaults to 2 places.
\`\`\`

### Develop the plan

Spawn a **planning-model subagent** using model \`MODEL-grilling\` to develop the plan.
The subagent works entirely by editing \`.gtd/TODO.md\`:

1. **Explore the codebase before asking anything** — read the relevant files,
   tests, and docs so every question below is one the codebase genuinely
   cannot answer.
2. **Replace the captured input / seed template with a real product plan** —
   what to build and why, and the user-facing behavior it should have,
   grounded in the codebase. Leave *how* to build it for the next phase.
3. **Iterate internally** (spawn further subagents, reconsider, cross-check)
   until the plan is as complete as it can get without human input. Do not
   leave this to a future round — there isn't one before the human is asked.
4. For every remaining open question, add it under a \`## Open Questions\`
   section near the top of the file, one \`### <question>\` sub-heading per
   question, whose first body line is \`Suggested default: <answer>\` — your
   best-guess answer, stated plainly, that the human can accept as-is. This
   structure is enforced: a \`###\` question with no \`Suggested default:\` line
   blocks your turn — \`gtd step-agent\` refuses until it's fixed. Omit the
   \`## Open Questions\` section entirely once there are none.
5. Leave \`.gtd/TODO.md\` **uncommitted** — the human's turn (\`gtd step\`) reads it
   next.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > grilling agent with turnDiff plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/TODO.md\` holds the plan under development. Develop it into a concrete,
product-level plan **in this one turn** — use subagents / internal iteration
to go as deep as needed; there is no further agent-only round after this one.

**Scope: product and user-facing decisions only.** Do not decide
implementation details in this file — file/module structure, data models,
library or tech-stack choices, and other architecture questions belong to the
next phase (\`.gtd/ARCHITECTURE.md\`) and must not be treated as open questions
here.

### Develop the plan

Spawn a **planning-model subagent** using model \`MODEL-grilling\` to develop the plan.
The subagent works entirely by editing \`.gtd/TODO.md\`:

1. **Explore the codebase before asking anything** — read the relevant files,
   tests, and docs so every question below is one the codebase genuinely
   cannot answer.
2. **Replace the captured input / seed template with a real product plan** —
   what to build and why, and the user-facing behavior it should have,
   grounded in the codebase. Leave *how* to build it for the next phase.
3. **Iterate internally** (spawn further subagents, reconsider, cross-check)
   until the plan is as complete as it can get without human input. Do not
   leave this to a future round — there isn't one before the human is asked.
4. For every remaining open question, add it under a \`## Open Questions\`
   section near the top of the file, one \`### <question>\` sub-heading per
   question, whose first body line is \`Suggested default: <answer>\` — your
   best-guess answer, stated plainly, that the human can accept as-is. This
   structure is enforced: a \`###\` question with no \`Suggested default:\` line
   blocks your turn — \`gtd step-agent\` refuses until it's fixed. Omit the
   \`## Open Questions\` section entirely once there are none.
5. Leave \`.gtd/TODO.md\` **uncommitted** — the human's turn (\`gtd step\`) reads it
   next.

### Latest human input (answers / sketch / review feedback)

\`\`\`diff
diff --git a/TODO.md b/TODO.md
+- answer: use option A
\`\`\`

Read the diff above as **feedback, not finished work**:

- Code changes are suggestions — fold them into the plan and re-implement them
  properly, including test coverage, rather than restoring them verbatim.
- Code comments are positional feedback about the code at that location.
- Plan-text changes are global feedback on the plan (or the reviewed work) as
  a whole.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > grilling human json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/TODO.md\` holds the plan under development, with open questions under a
\`## Open Questions\` section — each \`### <question>\` carrying a suggested
default.

This is a human gate; there is nothing for the agent to do.

Tell the user:

- To answer a question, edit its \`### <question>\` entry under \`## Open
  Questions\` in place — replace the \`Suggested default: ...\` line with
  \`Answer: ...\` (or annotate it further), then run \`gtd step\`.
- To accept **all** suggested defaults as-is, run \`gtd step\` with **no
  edits** — this converges the plan and moves on to technical architecting.
"
`;

exports[`buildPrompt snapshots > grilling human plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

\`.gtd/TODO.md\` holds the plan under development, with open questions under a
\`## Open Questions\` section — each \`### <question>\` carrying a suggested
default.

This is a human gate; there is nothing for the agent to do.

Tell the user:

- To answer a question, edit its \`### <question>\` entry under \`## Open
  Questions\` in place — replace the \`Suggested default: ...\` line with
  \`Answer: ...\` (or annotate it further), then run \`gtd step\`.
- To accept **all** suggested defaults as-is, run \`gtd step\` with **no
  edits** — this converges the plan and moves on to technical architecting.
"
`;

exports[`buildPrompt snapshots > idle json 1`] = `
"The repository is idle — no work cycle is in progress and the health check is
green. Nothing to do.

Start a new cycle by sketching an idea in the working tree (edit code or add a
short note, e.g. \`IDEA.md\`) and running \`gtd step\` to capture it.
"
`;

exports[`buildPrompt snapshots > idle plain 1`] = `
"The repository is idle — no work cycle is in progress and the health check is
green. Nothing to do.

Start a new cycle by sketching an idea in the working tree (edit code or add a
short note, e.g. \`IDEA.md\`) and running \`gtd step\` to capture it.
"
`;

exports[`buildPrompt snapshots > learning with squashDiff and squashBase json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The process is **approved and done**, and headed for a squash. Before that
happens, \`.gtd/LEARNINGS.md\` has been committed with a template — your job is
to overwrite it with the real, distilled learnings from this cycle so they
survive the squash even though the granular history won't.

### Step 1 — Walk the cycle's history

Scan the git history back to the cycle's start (the full-process diff is
inlined below, and \`git log\` over the same range shows every \`gtd: ...\` /
\`gtd(agent): ...\` / \`gtd(human): ...\` commit). Look specifically for:

- **Test failures and fixes** — each \`gtd: errors\` round and the fix that
  followed it. What broke, and what actually made it pass?
- **Review feedback** — human \`.gtd/REVIEW.md\` notes and \`gtd: review
  feedback\` detours. What did the human have to correct that the agent got
  wrong on its own?
- **Health-check rounds** — any \`gtd: health-check\` / \`gtd: health-fix\`
  cycles. Environmental or systemic issues surfaced outside normal building?
- **Grilling decisions** — \`.gtd/TODO.md\`'s "## Captured input" sections and
  plan edits. Trade-offs or conventions the human specified that a future
  agent should already know.

### Step 2 — Distill, don't transcribe

For each thing you found, ask: is this a **durable, generalizable lesson**
(a convention, a gotcha, a pattern this project wants followed next time), or
a **one-off detail** specific to this change? Keep only the former. A future
agent reading this should learn something that changes how it works on this
project, not a recap of what happened.

### Step 3 — Overwrite .gtd/LEARNINGS.md

Replace the **entire content** of \`.gtd/LEARNINGS.md\` with your distilled
learnings (plain markdown, no leftover template scaffolding). If nothing
durable surfaced this cycle, write a short explicit note saying so — don't
leave the placeholder text in place. Leave the file uncommitted and finish
your turn; a human reviews it next before it's integrated into the project's
own memory (CLAUDE.md/AGENTS.md/docs).

Cycle base: abc1234

### Full-process diff (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`
"
`;

exports[`buildPrompt snapshots > learning with squashDiff and squashBase plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The process is **approved and done**, and headed for a squash. Before that
happens, \`.gtd/LEARNINGS.md\` has been committed with a template — your job is
to overwrite it with the real, distilled learnings from this cycle so they
survive the squash even though the granular history won't.

### Step 1 — Walk the cycle's history

Scan the git history back to the cycle's start (the full-process diff is
inlined below, and \`git log\` over the same range shows every \`gtd: ...\` /
\`gtd(agent): ...\` / \`gtd(human): ...\` commit). Look specifically for:

- **Test failures and fixes** — each \`gtd: errors\` round and the fix that
  followed it. What broke, and what actually made it pass?
- **Review feedback** — human \`.gtd/REVIEW.md\` notes and \`gtd: review
  feedback\` detours. What did the human have to correct that the agent got
  wrong on its own?
- **Health-check rounds** — any \`gtd: health-check\` / \`gtd: health-fix\`
  cycles. Environmental or systemic issues surfaced outside normal building?
- **Grilling decisions** — \`.gtd/TODO.md\`'s "## Captured input" sections and
  plan edits. Trade-offs or conventions the human specified that a future
  agent should already know.

### Step 2 — Distill, don't transcribe

For each thing you found, ask: is this a **durable, generalizable lesson**
(a convention, a gotcha, a pattern this project wants followed next time), or
a **one-off detail** specific to this change? Keep only the former. A future
agent reading this should learn something that changes how it works on this
project, not a recap of what happened.

### Step 3 — Overwrite .gtd/LEARNINGS.md

Replace the **entire content** of \`.gtd/LEARNINGS.md\` with your distilled
learnings (plain markdown, no leftover template scaffolding). If nothing
durable surfaced this cycle, write a short explicit note saying so — don't
leave the placeholder text in place. Leave the file uncommitted and finish
your turn; a human reviews it next before it's integrated into the project's
own memory (CLAUDE.md/AGENTS.md/docs).

Cycle base: abc1234

### Full-process diff (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > learning-apply json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The human has approved (and possibly amended) \`.gtd/LEARNINGS.md\`. Your job is
to integrate those learnings into the project's own memory, not to touch
\`.gtd/LEARNINGS.md\` itself.

1. **Read \`.gtd/LEARNINGS.md\`.**
2. **Pick the right home for each point**, using your judgment and this
   project's existing convention:
   - An existing \`CLAUDE.md\` or \`AGENTS.md\` at the repo root (or a directory
     closer to what the learning concerns) is usually the right place.
   - If neither exists and the learnings warrant one, create \`AGENTS.md\` at
     the repo root.
   - A learning about a specific subsystem may fit better in that
     subsystem's own docs than a root-level file — use your judgment.
3. **Integrate, don't just append** — merge each point into the relevant
   section of the target file(s); rephrase for clarity, dedupe against what's
   already documented, and keep the existing document's structure and tone.
4. **Never delete or edit \`.gtd/LEARNINGS.md\`** — the machine removes it once
   your turn is captured.
5. **Leave every change uncommitted and finish your turn.**
"
`;

exports[`buildPrompt snapshots > learning-apply plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The human has approved (and possibly amended) \`.gtd/LEARNINGS.md\`. Your job is
to integrate those learnings into the project's own memory, not to touch
\`.gtd/LEARNINGS.md\` itself.

1. **Read \`.gtd/LEARNINGS.md\`.**
2. **Pick the right home for each point**, using your judgment and this
   project's existing convention:
   - An existing \`CLAUDE.md\` or \`AGENTS.md\` at the repo root (or a directory
     closer to what the learning concerns) is usually the right place.
   - If neither exists and the learnings warrant one, create \`AGENTS.md\` at
     the repo root.
   - A learning about a specific subsystem may fit better in that
     subsystem's own docs than a root-level file — use your judgment.
3. **Integrate, don't just append** — merge each point into the relevant
   section of the target file(s); rephrase for clarity, dedupe against what's
   already documented, and keep the existing document's structure and tone.
4. **Never delete or edit \`.gtd/LEARNINGS.md\`** — the machine removes it once
   your turn is captured.
5. **Leave every change uncommitted and finish your turn.**

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > review with no diff json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`.gtd/REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`.gtd/REVIEW.md\`** in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`.gtd/REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.
   - This structure is enforced: the \`# Review: <hash>\` header, the
     \`<!-- base: ... -->\` comment, and at least one file pointer per chunk
     are all required — a missing one blocks your turn (\`gtd step-agent\`
     refuses until it's fixed).

4. Leave \`.gtd/REVIEW.md\` **uncommitted** and finish your turn — the human reviews
   it next.
"
`;

exports[`buildPrompt snapshots > review with no diff plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`.gtd/REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`.gtd/REVIEW.md\`** in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`.gtd/REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.
   - This structure is enforced: the \`# Review: <hash>\` header, the
     \`<!-- base: ... -->\` comment, and at least one file pointer per chunk
     are all required — a missing one blocks your turn (\`gtd step-agent\`
     refuses until it's fixed).

4. Leave \`.gtd/REVIEW.md\` **uncommitted** and finish your turn — the human reviews
   it next.

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > review with refDiff and reviewBase json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`.gtd/REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`.gtd/REVIEW.md\`** in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`.gtd/REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.
   - This structure is enforced: the \`# Review: <hash>\` header, the
     \`<!-- base: ... -->\` comment, and at least one file pointer per chunk
     are all required — a missing one blocks your turn (\`gtd step-agent\`
     refuses until it's fixed).

4. Leave \`.gtd/REVIEW.md\` **uncommitted** and finish your turn — the human reviews
   it next.

Review base: abc1234

### Changes to review (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`
"
`;

exports[`buildPrompt snapshots > review with refDiff and reviewBase plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`.gtd/REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`.gtd/REVIEW.md\`** in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`.gtd/REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.
   - This structure is enforced: the \`# Review: <hash>\` header, the
     \`<!-- base: ... -->\` comment, and at least one file pointer per chunk
     are all required — a missing one blocks your turn (\`gtd step-agent\`
     refuses until it's fixed).

4. Leave \`.gtd/REVIEW.md\` **uncommitted** and finish your turn — the human reviews
   it next.

Review base: abc1234

### Changes to review (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;

exports[`buildPrompt snapshots > squashing with squashDiff and squashBase json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The process is **approved and done**. \`.gtd/SQUASH_MSG.md\` has already been
committed with a template — your job is to overwrite it with the real
conventional-commits squash message and finish your turn.

### Step 1 — Extract decisions from grilling rounds

Scan the git history of recent \`gtd: ...\` / \`gtd(agent): ...\` /
\`gtd(human): ...\` commits. Look for changes to \`.gtd/TODO.md\` and
\`.gtd/ARCHITECTURE.md\` — specifically the \`## Captured input\` sections and any
edits to plan/architecture text. Extract **key decisions, trade-offs, and
design choices** made during grilling and architecting rounds — specifically
the \`### <question>\` entries under \`## Open Questions\` that got resolved
(\`Answer:\`, or an accepted \`Suggested default:\`) this cycle.

### Step 2 — Draft the commit message

Draft ONE conventional-commits message:

\`\`\`
type(scope): subject

body (explain the why — motivation, trade-offs, key decisions from grilling)

## Decisions

### <question, verbatim from Step 1>
Answer: <the resolved answer> (default accepted | human override: <reason>)

Gtd-Decisions: true
\`\`\`

- **type**: \`feat\` / \`fix\` / \`refactor\` / \`chore\` / \`docs\` / \`test\`
- **subject**: imperative mood, ≤ 72 characters, lowercase after the colon
- **body**: a brief motivation/trade-off summary.
- **\`## Decisions\`**: one block per question resolved THIS cycle (from Step
  1) — omit the whole section (and the \`Gtd-Decisions: true\` line) entirely
  when this cycle recorded no decisions. Don't restate decisions from earlier
  cycles — this commit only records what changed now; a later grilling round
  reads the full history of these sections back as context, so repeating old
  entries here would just duplicate them forever. If this cycle's answer
  contradicts an earlier cycle's, don't try to edit or annotate the old one —
  just state the new answer plainly; the newer commit naturally reads as the
  current truth.

### Step 3 — Overwrite .gtd/SQUASH_MSG.md

Replace the **entire content** of \`.gtd/SQUASH_MSG.md\` (plain text, no markdown
wrapper, no leftover template scaffolding) with the message from Step 2, then
leave it uncommitted and finish your turn — \`gtd step-agent\` performs the
squash using this file's content.

Squash base: abc1234

### Full-process diff (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`
"
`;

exports[`buildPrompt snapshots > squashing with squashDiff and squashBase plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

The \`.gtd/\` directory is the workflow's own state (plans, task specs, review
records). Never create, edit, delete, or reference files under \`.gtd/\` — and
never instruct a subagent to — except the specific \`.gtd/\` file this prompt
explicitly tells you to work on. A \`TODO.md\`, \`REVIEW.md\`, or similar file
*outside* \`.gtd/\` is ordinary project code, not workflow state.

The process is **approved and done**. \`.gtd/SQUASH_MSG.md\` has already been
committed with a template — your job is to overwrite it with the real
conventional-commits squash message and finish your turn.

### Step 1 — Extract decisions from grilling rounds

Scan the git history of recent \`gtd: ...\` / \`gtd(agent): ...\` /
\`gtd(human): ...\` commits. Look for changes to \`.gtd/TODO.md\` and
\`.gtd/ARCHITECTURE.md\` — specifically the \`## Captured input\` sections and any
edits to plan/architecture text. Extract **key decisions, trade-offs, and
design choices** made during grilling and architecting rounds — specifically
the \`### <question>\` entries under \`## Open Questions\` that got resolved
(\`Answer:\`, or an accepted \`Suggested default:\`) this cycle.

### Step 2 — Draft the commit message

Draft ONE conventional-commits message:

\`\`\`
type(scope): subject

body (explain the why — motivation, trade-offs, key decisions from grilling)

## Decisions

### <question, verbatim from Step 1>
Answer: <the resolved answer> (default accepted | human override: <reason>)

Gtd-Decisions: true
\`\`\`

- **type**: \`feat\` / \`fix\` / \`refactor\` / \`chore\` / \`docs\` / \`test\`
- **subject**: imperative mood, ≤ 72 characters, lowercase after the colon
- **body**: a brief motivation/trade-off summary.
- **\`## Decisions\`**: one block per question resolved THIS cycle (from Step
  1) — omit the whole section (and the \`Gtd-Decisions: true\` line) entirely
  when this cycle recorded no decisions. Don't restate decisions from earlier
  cycles — this commit only records what changed now; a later grilling round
  reads the full history of these sections back as context, so repeating old
  entries here would just duplicate them forever. If this cycle's answer
  contradicts an earlier cycle's, don't try to edit or annotate the old one —
  just state the new answer plainly; the newer commit naturally reads as the
  current truth.

### Step 3 — Overwrite .gtd/SQUASH_MSG.md

Replace the **entire content** of \`.gtd/SQUASH_MSG.md\` (plain text, no markdown
wrapper, no leftover template scaffolding) with the message from Step 2, then
leave it uncommitted and finish your turn — \`gtd step-agent\` performs the
squash using this file's content.

Squash base: abc1234

### Full-process diff (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`

Finish your turn by running \`gtd step-agent\`. Then run \`gtd next\` and follow
its output — repeat this cycle as long as the output is addressed to you (the
agent); when it awaits the human, stop and hand off.
"
`;
